unpackaged/main/default/objects/Account/fields/Last_month_compared_to_previous_3__c.field-meta.xml
<CustomField>
    <fullName>Last_month_compared_to_previous_3__c</fullName>
    <description>Last month compared to previous 3 for call cycle algorithm</description>
    <label>Last month compared to previous 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Significant increase</fullName>
            </value>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>No change</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Significant decrease</fullName>
            </value>
            <value>
                <fullName>Stopped spend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>