unpackaged/main/default/objects/Account/fields/Last_Owner_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Transfer_Date__c</fullName>
    <label>Last Owner Transfer Date</label>
    <type>Date</type>
</CustomField>