unpackaged/main/default/objects/Account/fields/Last_R12_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_R12_Sales__c</fullName>
    <label>Last R12 Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>