unpackaged/main/default/objects/Account/fields/Last_Refresh_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Refresh_On__c</fullName>
    <label>Last Refresh On</label>
    <type>DateTime</type>
</CustomField>