unpackaged/main/default/objects/Account/fields/Last_Year_MTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_MTD_Sales__c</fullName>
    <label>Last Year MTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>