unpackaged/main/default/objects/Account/fields/Last_YTD_GP__c.field-meta.xml
<CustomField>
    <fullName>Last_YTD_GP__c</fullName>
    <label>Last YTD GP $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>