unpackaged/main/default/objects/Account/fields/Last_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_YTD_Sales__c</fullName>
    <description>The Last Year Year-To-Date Total sales of Account</description>
    <formula>BLANKVALUE(Last_YTD_Sales_F_T__c, 0) + 
BLANKVALUE(Last_YTD_Sales_Stores__c, 0) + 
BLANKVALUE(Last_YTD_Sales_TC__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>