unpackaged/main/default/objects/Account/fields/Last_YTD_Sales_F_T__c.field-meta.xml
<CustomField>
    <fullName>Last_YTD_Sales_F_T__c</fullName>
    <description>Aggregate Sales for Frame and Truss for the previous Financial Year. This data is set via integration</description>
    <label>Last YTD Sales - F&amp;T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>