unpackaged/main/default/objects/Account/fields/Last_YTD_Sales_Stores__c.field-meta.xml
<CustomField>
    <fullName>Last_YTD_Sales_Stores__c</fullName>
    <description>Aggregate Sales for Stores for the previous Financial Year. This data is set via integration</description>
    <label>Last YTD Sales - Stores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>