unpackaged/main/default/objects/Account/fields/Last_YTD_Sales_TC__c.field-meta.xml
<CustomField>
    <fullName>Last_YTD_Sales_TC__c</fullName>
    <description>Aggregate Sales for Trade Centers for the previous Financial Year. This data is set via integration</description>
    <label>Last YTD Sales - TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>