unpackaged/main/default/objects/Account/fields/Length_of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Relationship__c</fullName>
    <formula>IF(((YEAR( TODAY()) - YEAR( Approval_Date__c ))*12) + (MONTH(TODAY()) - MONTH( Approval_Date__c ))
 &lt;= 12,
    &quot;New&quot;,
IF(AND(((YEAR(TODAY()) - YEAR(Approval_Date__c )) * 12) + (MONTH(TODAY()) - MONTH(Approval_Date__c )) &lt; 24,((YEAR(TODAY()) - YEAR(Approval_Date__c )) * 12) + (MONTH(TODAY()) - MONTH(Approval_Date__c )) &gt;= 12),
         &quot;Establishing&quot;,

IF(((YEAR(TODAY()) - YEAR(Approval_Date__c )) * 12) + (MONTH(TODAY()) - MONTH(Approval_Date__c )) &gt;= 24,
        &quot;Existing&quot;,
        &quot;New&quot;
    )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Relationship</label>
    <type>Text</type>
</CustomField>