unpackaged/main/default/objects/Account/fields/LifeCycle_Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Call_Priority__c</fullName>
    <formula>Account_Extension__r.Call_Cycle_Priority__c</formula>
    <label>LifeCycle Call Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>