unpackaged/main/default/objects/Account/fields/LifeCycle_Call_Ranking__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Call_Ranking__c</fullName>
    <formula>Account_Extension__r.Call_Cycle_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LifeCycle Call Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>