unpackaged/main/default/objects/Account/fields/LifeCycle_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Call_Reason__c</fullName>
    <formula>TEXT(Account_Extension__r.Call_Cycle_Reason__c)</formula>
    <label>LifeCycle Call Reason</label>
    <type>Text</type>
</CustomField>