unpackaged/main/default/objects/Account/fields/LifeCycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Stage__c</fullName>
    <formula>TEXT(Account_Extension__r.Life_Cycle_Stage__c)</formula>
    <label>LifeCycle Stage</label>
    <type>Text</type>
</CustomField>