unpackaged/main/default/objects/Account/fields/Marketing_Account__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CCRM15-83</description>
    <label>Marketing Account</label>
    <type>Checkbox</type>
</CustomField>