unpackaged/main/default/objects/Account/fields/Monthly_Share_Of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Share_Of_Wallet__c</fullName>
    <description>The share of wallet of the previous month.</description>
    <inlineHelpText>This field shows the Share of Wallet for the previous month.</inlineHelpText>
    <label>Monthly Share Of Wallet</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>