unpackaged/main/default/objects/Account/fields/MTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>MTD_Growth__c</fullName>
    <description>This field calculates the Accounts Month to Date Growth in $</description>
    <formula>MTD_Sales__c - Last_Year_MTD_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>