unpackaged/main/default/objects/Account/fields/MTD_Growth_Percentage__c.field-meta.xml
<CustomField>
    <fullName>MTD_Growth_Percentage__c</fullName>
    <formula>IF( OR(MTD_Sales__c=0, Last_Year_MTD_Sales__c=0, ISBLANK(MTD_Sales__c), ISBLANK(Last_Year_MTD_Sales__c)),0, ((MTD_Sales__c - Last_Year_MTD_Sales__c ) / Last_Year_MTD_Sales__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>