unpackaged/main/default/objects/Account/fields/MTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>MTD_Sales__c</fullName>
    <label>MTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>