unpackaged/main/default/objects/Account/fields/New_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>