unpackaged/main/default/objects/Account/fields/No_of_PowerPass_App_Transactions__c.field-meta.xml
<CustomField>
    <fullName>No_of_PowerPass_App_Transactions__c</fullName>
    <description>Is mapped to DW =  PWR_PASS_TRX_CNT</description>
    <label>No. of PowerPass App Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>