unpackaged/main/default/objects/Account/fields/Non_TS_Manager__c.field-meta.xml
<CustomField>
    <fullName>Non_TS_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non TS Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>