unpackaged/main/default/objects/Account/fields/Number_of_Onboarding_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Onboarding_Call_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holds the number of onboarding call attempts</description>
    <label>Number of Onboarding Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>