unpackaged/main/default/objects/Account/fields/NZBN__c.field-meta.xml
<CustomField>
    <fullName>NZBN__c</fullName>
    <label>NZBN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>