unpackaged/main/default/objects/Account/fields/On_Contract__c.field-meta.xml
<CustomField>
    <fullName>On_Contract__c</fullName>
    <description>Yes if any of related Contract is Active. No if NONE of any related Contract is Active</description>
    <label>On Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>