unpackaged/main/default/objects/Account/fields/On_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Referral_Date__c</fullName>
    <description>This is populated when the Account is set to On Referral status</description>
    <label>On Referral Date</label>
    <type>Date</type>
</CustomField>