unpackaged/main/default/objects/Account/fields/Onboarding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Notes__c</fullName>
    <description>The field that contains the onboarding notes.</description>
    <label>Onboarding Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>