unpackaged/main/default/objects/Account/fields/Operations_Region__c.field-meta.xml
<CustomField>
    <fullName>Operations_Region__c</fullName>
    <description>The operations region code from assigned store</description>
    <formula>Assigned_Store__r.Operations_Region_Code__c</formula>
    <label>Assigned Region</label>
    <type>Text</type>
</CustomField>