unpackaged/main/default/objects/Account/fields/Owner_is_active__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_active__c</fullName>
    <description>Used by Admin only</description>
    <formula>IF(Owner.IsActive = TRUE, TRUE, FALSE)</formula>
    <label>Owner is active</label>
    <type>Checkbox</type>
</CustomField>