unpackaged/main/default/objects/Account/fields/Owner_Rep_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Rep_Id_Formula__c</fullName>
    <description>Used by process builder to evaluate if user sles rep id is not null</description>
    <formula>$User.Sales_Rep_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Rep Id Formula</label>
    <type>Text</type>
</CustomField>