unpackaged/main/default/objects/Account/fields/Ownership_change_date__c.field-meta.xml
<CustomField>
    <fullName>Ownership_change_date__c</fullName>
    <label>Ownership change date</label>
    <type>Date</type>
</CustomField>