unpackaged/main/default/objects/Account/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <description>This field displays as ticked checkbox if Approval Date is blank and displays as unticked checkbox if Approval Date is not blank.</description>
    <formula>IF( 
AND(ISPICKVAL(Account_Status__c,&#39;Active&#39;),
ISBLANK( Approval_Date__c ))
 , TRUE, FALSE)</formula>
    <label>Pending</label>
    <type>Checkbox</type>
</CustomField>