unpackaged/main/default/objects/Account/fields/PL_FTD_Summary__c.field-meta.xml
<CustomField>
    <fullName>PL_FTD_Summary__c</fullName>
    <description>A summary of PLs and FTDs for NZ prospect</description>
    <label>PL/FTD Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>