unpackaged/main/default/objects/Account/fields/PLS_Builder_ID__c.field-meta.xml
<CustomField>
    <fullName>PLS_Builder_ID__c</fullName>
    <externalId>true</externalId>
    <label>PLS Builder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>