unpackaged/main/default/objects/Account/fields/Power_Pass_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Power_Pass_Account_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Power Pass Account Number</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>