unpackaged/main/default/objects/Account/fields/PowerPass_Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_Account_Created_Date__c</fullName>
    <description>This field is populated when a PowerPass account is created</description>
    <label>PowerPass Account Created Date</label>
    <type>Date</type>
</CustomField>