unpackaged/main/default/objects/Account/fields/Powerpass_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Powerpass_Account_Manager__c</fullName>
    <description>This field stores the freetext Account Manager value captured in Power Pass signup </description>
    <label>Powerpass Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>