unpackaged/main/default/objects/Account/fields/PowerPass_App_Registered__c.field-meta.xml
<CustomField>
    <fullName>PowerPass_App_Registered__c</fullName>
    <description>Field to track if a customer has registered for the PowerPass mobile application. Populated by Integration</description>
    <label>PowerPass App Registered</label>
    <type>DateTime</type>
</CustomField>