unpackaged/main/default/objects/Account/fields/Preferred_Transaction_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Transaction_Method__c</fullName>
    <label>Preferred Transaction Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In Store</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>