unpackaged/main/default/objects/Account/fields/Previous_Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assigned_Store__c</fullName>
    <label>Previous Assigned Store</label>
    <length>100</length>
    <type>Text</type>
</CustomField>