unpackaged/main/default/objects/Account/fields/Price_List_Changed__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When any changes to the price list is made this is set</description>
    <label>Price List Changed</label>
    <type>Checkbox</type>
</CustomField>