unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Account_Id__c</fullName>
    <description>For use in the Pricing Assignment tab.</description>
    <formula>If(Contract_Group__c = &quot;&quot;, if( ParentId = &quot;&quot;, CASESAFEID(Id), CASESAFEID(ParentId)), CASESAFEID(Contract_Group__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Assignment Account Id</label>
    <type>Text</type>
</CustomField>