unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Approval_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Assignment Approval Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>