unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Approver__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used for Spend Band Approval Process to be an Approver. Need as related user to assign as approver</description>
    <label>Pricing Assignment Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>