unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Error_Code_Descr__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Error_Code_Descr__c</fullName>
    <description>Error code + description is available response from EBS</description>
    <label>Pricing Assignment Error Code Descr</label>
    <length>100</length>
    <type>Text</type>
</CustomField>