unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Error_Meaning__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Error_Meaning__c</fullName>
    <description>Error meaning from EBS</description>
    <label>Pricing Assignment Error Meaning</label>
    <type>TextArea</type>
</CustomField>