unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Requested_On__c</fullName>
    <description>Date when the pricing assignment approval process is initiated</description>
    <label>Last Pricing Assignment Requested On</label>
    <type>Date</type>
</CustomField>