unpackaged/main/default/objects/Account/fields/Pricing_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Status__c</fullName>
    <label>Pricing Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Actioned</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Actioned</fullName>
                <isActive>false</isActive>
                <label>Actioned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>