unpackaged/main/default/objects/Account/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <description>The primary segment of the account</description>
    <formula>Secondary_Segment__r.Primary__c</formula>
    <label>Primary Segment</label>
    <type>Text</type>
</CustomField>