unpackaged/main/default/objects/Account/fields/Prior_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Prior_Account_Type__c</fullName>
    <description>Used to define prior value for account type change custom notifications</description>
    <label>Prior Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>