unpackaged/main/default/objects/Account/fields/Prior_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Prior_Credit_Limit__c</fullName>
    <description>Used for sending custom notifications for updating credit limit values</description>
    <label>Prior Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>