unpackaged/main/default/objects/Account/fields/PriorAccountType__c.field-meta.xml
<CustomField>
    <fullName>PriorAccountType__c</fullName>
    <description>Used to define prior value for account type change custom notifications</description>
    <label>PriorAccountType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>