unpackaged/main/default/objects/Account/fields/PriorCreditLimit__c.field-meta.xml
<CustomField>
    <fullName>PriorCreditLimit__c</fullName>
    <description>Used for sending custom notifications for updating credit limit values</description>
    <label>PriorCreditLimit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>