unpackaged/main/default/objects/Account/fields/Projected_Sales_Amount__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Amount__c</fullName>
    <formula>Last_3_Month_Sales__c * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>