unpackaged/main/default/objects/Account/fields/Proposed_Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Spend_Band__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Accounts (Proposed Spend Band)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>