unpackaged/main/default/objects/Account/fields/R12_Growth__c.field-meta.xml
<CustomField>
    <fullName>R12_Growth__c</fullName>
    <formula>R12_Sales__c -  Last_R12_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R12 Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>