unpackaged/main/default/objects/Account/fields/R12_Sales__c.field-meta.xml
<CustomField>
    <fullName>R12_Sales__c</fullName>
    <label>R12 Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>