unpackaged/main/default/objects/Account/fields/R12_Sales_Rank__c.field-meta.xml
<CustomField>
    <fullName>R12_Sales_Rank__c</fullName>
    <description>Sales rank as provided by the Analytics system</description>
    <label>R12 Sales Rank</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>