unpackaged/main/default/objects/Account/fields/R12_Top_Spend_Location_1__c.field-meta.xml
<CustomField>
    <fullName>R12_Top_Spend_Location_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R12 Top Spend Location 1</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Accounts (Top Spend Location 1)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>