unpackaged/main/default/objects/Account/fields/R12_Top_Spend_Location_2__c.field-meta.xml
<CustomField>
    <fullName>R12_Top_Spend_Location_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R12 Top Spend Location 2</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Accounts (Top Spend Location 2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>