unpackaged/main/default/objects/Account/fields/R12_Total_Transaction_Numbers__c.field-meta.xml
<CustomField>
    <fullName>R12_Total_Transaction_Numbers__c</fullName>
    <label>R12 Total Transaction Numbers</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>