unpackaged/main/default/objects/Account/fields/Reason_for_Share__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Share__c</fullName>
    <description>Reason for share as identified by the account manager</description>
    <label>Reason for Share</label>
    <length>255</length>
    <type>Text</type>
</CustomField>