unpackaged/main/default/objects/Account/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate</label>
    <type>Checkbox</type>
</CustomField>