unpackaged/main/default/objects/Account/fields/Rebate_Account_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Account_Grouping__c</fullName>
    <formula>IF(Rebate__c ,  Name   , IF(Child_Rebate__c, Parent.Name, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rebate Account Grouping</label>
    <type>Text</type>
</CustomField>