unpackaged/main/default/objects/Account/fields/Receive_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Receive_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check = Yes - Receive marketing emails
Uncheck = No Not to receive marketing emails</description>
    <label>Receive Marketing</label>
    <type>Checkbox</type>
</CustomField>