unpackaged/main/default/objects/Account/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Name of the record type</description>
    <formula>RecordType.DeveloperName</formula>
    <inlineHelpText>Name of the record type</inlineHelpText>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>