unpackaged/main/default/objects/Account/fields/Scheduled_Engagement_Call__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Engagement_Call__c</fullName>
    <description>Last / Latest scheduled engagement call</description>
    <label>Scheduled Engagement Call</label>
    <type>Date</type>
</CustomField>