unpackaged/main/default/objects/Account/fields/Search_Details__c.field-meta.xml
<CustomField>
    <fullName>Search_Details__c</fullName>
    <description>Used in Account Search Layout</description>
    <formula>IF(
ISBLANK(TEXT(Account_Status__c )),Power_Pass_Account_Number__c,
IF(
ISBLANK(Power_Pass_Account_Number__c),TEXT(Account_Status__c),
Power_Pass_Account_Number__c + &quot; | &quot; + TEXT(Account_Status__c)
))</formula>
    <label>Search Details</label>
    <type>Text</type>
</CustomField>