unpackaged/main/default/objects/Account/fields/Secondary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The secondary segment of the account</description>
    <label>Secondary Segment</label>
    <referenceTo>Segment__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>