unpackaged/main/default/objects/Account/fields/Secondary_Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Segment_Name__c</fullName>
    <formula>Secondary_Segment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Segment Name</label>
    <type>Text</type>
</CustomField>