unpackaged/main/default/objects/Account/fields/Send_Data_to_CPS__c.field-meta.xml
<CustomField>
    <fullName>Send_Data_to_CPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this checkbox will fire the Apex Web Service Callout to send the record to CPS for them to update.</description>
    <label>Send Data to CPS</label>
    <type>Checkbox</type>
</CustomField>