unpackaged/main/default/objects/Account/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <description>Share of wallet as identified by the account manager</description>
    <inlineHelpText>This is the R12 Share of Wallet</inlineHelpText>
    <label>Share of Wallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>