unpackaged/main/default/objects/Account/fields/Sign_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>Sign_Up_Method__c</fullName>
    <label>Sign Up Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>