unpackaged/main/default/objects/Account/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <description>Consent related field. Value is provided inthe payload from the integration layer 
e.g. &quot;COS&quot;.</description>
    <label>Created by Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>