unpackaged/main/default/objects/Account/fields/SourceSystemModule__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemModule__c</fullName>
    <description>Consent related custom field. 	
Value is provided in the payload from the integration layer e.g. “Hireshop”</description>
    <label>Created by Source System Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>