unpackaged/main/default/objects/Account/fields/Spend_Band__c.field-meta.xml
<CustomField>
    <fullName>Spend_Band__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Spend Band for the Account</description>
    <label>Spend Band</label>
    <referenceTo>Spend_Band__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>