unpackaged/main/default/objects/Account/fields/Store_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Store_Phone_Number__c</fullName>
    <description>This pulls in the Home Store&#39;s phone number. It is used on email templates</description>
    <formula>IF(
NOT(ISBLANK(Assigned_Store__c)),
Assigned_Store__r.Phone_Number__c,
Home_Store__r.Phone_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Phone Number</label>
    <type>Text</type>
</CustomField>